Update the project description.

--- a/LM3S_lwIP_Client/ReadMe
+++ b/LM3S_lwIP_Client/ReadMe
@@ -1,6 +1,11 @@
 	Ethernet lwIP WebClient 
-================
+====================================
 	It's a project of WebClient using the lwIP.
+	这个项目是利用lwIP 来实现和外界Internet进行HTTP 通信的。
+	开发板作为Client端，使用HTTP GET/POST方法来实现通信。
 	
+	
+	
+		
 	
 	
